[package]
name = "rumpunch"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "UDP multi-hole puncher for NAT traversal (including, sometimes, Symmetric NATs)"
repository = "https://github.com/neil2468/rumpunch.git"

keywords = ["nat-traversal", "udp", "hole-punching", "symmetric-nat", "nat"]
categories = ["network-programming"]

[dependencies]
anyhow = "1.0.72"
dashmap = "5.5.0"
postcard = { version = "1.0.4", features = ["use-std"] }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["rt", "net", "time"] }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
